@@ -113,6 +113,9 @@ static char const preferences_skeleton[] =
 "    </group>\n"
 "  </group>\n"
 "  <group id=\"colorselector\" page=\"0\"/>\n"
+"  <group id=\"embedded\">\n"
+"    <group id=\"swatches\" />\n"
+"  </group>\n"
 "  <group id=\"dialogs\">\n"
 "    <group id=\"toolbox\"/>\n"
 "    <group id=\"fillstroke\"/>\n"
